--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   "scripts": {
     "start": "electron main.js",
     "buildOSX": "electron-packager ./ Harmony --platform darwin --arch x64",
-    "build": "build --linux deb rpm tar.xz --win nsis zip"
+    "build": "build --linux deb rpm tar.xz --win nsis zip",
+    "buildWin": "-- do something here"
   },
   "keywords": [
     "music",
     "player",
     "soundcloud",
     "google play",
-    "spotify"
+    "spotify",
+    "groove"
   ],
   "devDependencies": {
-    "electron-prebuilt": "1.2.8"
+    "electron-prebuilt": "^1.2.7"
   },
   "dependencies": {
     "configstore": "^1.4.0",
@@ -28,20 +30,23 @@
     "md5": "^2.0.0",
     "musicmetadata": "^2.0.2",
     "node-notifier": "^4.4.0",
-    "playmusic": "github:vincelwt/playmusic",
+    "playmusic": "2.2.0",
     "recursive-readdir": "^1.3.0",
     "request": "^2.69.0",
     "youtube-node": "^1.3.0",
-    "ytdl-core": "^0.7.13"
+    "ytdl-core": "^0.7.13",
+
+    "pkginfo": "*","colors":"1.1.2"
+  
   },
   "optionalDependencies": {
-    "mpris-service": "^1.1.1",
-    "mediakeys": "github:nogizhopaboroda/mediakeys"
+    "mpris-service": "^1.1.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vincelwt/harmony.git"
+    "url": "https://github.com/arleyschrock/harmony.git"
   },
+  
   "build": {
      "asar": false,
      "appId": "com.vincelwt.harmony",
